--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,141 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Danh sách người dùng</title>
+    <title>View</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-<h1>Danh sách người dùng</h1>
-<ul>
-    {{range .data}}
-    <li>{{.name}} - {{.major}}</li>
-    {{end}}
-</ul>
+{{ template "header.html" . }}
+<main>
+    <h1>Content of the Main Page</h1>
+</main>
+<div class="container">
+    <div class="row">
+        <div class ="col md-12">
+            <div class="jumbotron p-3">
+                <h2>Manage <b>Service</b> <button type="button" class="btn btn-success" style="float:right"
+                                                   data-toggle="modal" data-target="#mymodal">Add new Person</button></h2>
+                <table class="table table-hover">
+
+                    <tr>
+                        <th>ID</th>
+                        <th>Name</th>
+                        <th>Major</th>
+                        <th>Deleted</th>
+                        <th>Action</th>
+                    </tr>
+
+
+                    {{range .data}}
+                    <tr>
+                        <td>{{._id}}</td>
+                        <td>{{.name}}</td>
+                        <td>{{.major}}</td>
+                        <td>{{.deleted}}</td>
+                        <td>
+                            <a href="" class="btn btn-warning btn-xs" data-toggle="modal" data-target="#modaledit">Edit</a>
+                            <a href="" class="btn btn-danger btn-xs" onclick="return confirm ('Are u sure ?')">Delete </a>
+                        </td>
+                    </tr>
+
+                    <!-- Update -->
+
+                    <div id="modaledit" class="modal fade" role="dialog">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h4 class="modal-title">Update Data</h4>
+
+                                </div>
+                                <div class="modal-body">
+
+                                    <form action="" method="POST">
+
+                                        <div class="form-group">
+                                            <label>Name:</label>
+                                            <input type="hidden" name="id" value="">
+                                            <input type="text" class="form-control" name="name" value="">
+                                        </div>
+
+                                        <div class="form-group">
+                                            <label>Email:</label>
+                                            <input type="text" class="form-control" name="major" value="">
+                                        </div>
+
+                                        <div class="form-group">
+                                            <button class="btn btn-primary" type="submit">Update</button>
+                                        </div>
+
+                                    </form>
+
+                                </div>
+
+                                <div class="modal-footer">
+
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+
+                                </div>
+
+
+
+                            </div>
+
+                        </div>
+                    </div>
+                    <!-- End -->
+                    {{end}}
+                </table>
+            </div>
+            <!-- Modal Add-->
+                <div id="mymodal" class="modal fade" role="dialog">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h4 class="modal-title">Add Data</h4>
+
+                        </div>
+                        <div class="modal-body">
+
+                            <form action="/add-person" method="POST">
+
+                                <div class="form-group">
+                                    <label>Name:</label>
+                                    <input type="text" class="form-control" name="name" required="1">
+                                </div>
+
+                                <div class="form-group">
+                                    <label>Major:</label>
+                                    <input type="text" class="form-control" name="major" required="1">
+                                </div>
+
+                                <div class="form-group">
+                                    <button class="btn btn-primary" type="submit">Confirm</button>
+                                </div>
+
+                            </form>
+
+                        </div>
+
+                        <div class="modal-footer">
+
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+
+                        </div>
+
+
+
+                    </div>
+
+                </div>
+
+            </div>
+            <!-- End -->
+
+        </div>
+    </div>
+</div>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.6/dist/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 </body>
 </html>
