--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
                         <td>{{$element.major}}</td>
                         <td>{{$element.deleted}}</td>
                         <td class="d-flex" style="gap: 4px">
-                            <a href="" class="btn btn-warning btn-xs" data-toggle="modal" data-backdrop="static" data-keyboard="false" data-target="#modaledit">Edit</a>
+                            <a href="" class="btn btn-warning btn-xs" data-toggle="modal" data-backdrop="static" data-keyboard="false" data-target="#modaledit{{$index}}">Edit</a>
                             <form action="/person/info/delete?id={{._id.Hex}}" method="POST">
                                 <button type="submit" class="btn btn-secondary">Delete</button>
                             </form>
@@ -41,9 +41,9 @@
 
                     <!-- Update -->
 
-                    <div id="modaledit" class="modal fade" role="dialog">
+                    <div id="modaledit{{$index}}" class="modal fade" role="dialog">
                         <div class="modal-dialog">
-                            <form action="" method="POST">
+                            <form action="/person/info/update?id={{._id.Hex}}" method="POST">
                             <div class="modal-content">
                                 <div class="modal-header">
                                     <h4 class="modal-title">Update Data</h4>
@@ -90,25 +90,8 @@
 
             <!--Modal Delete-->
 
-            <div id="mymodaldelete" class="modal fade" role="dialog">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title">Modal title</h5>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                            <p>Modal body text goes here.</p>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-primary">Save changes</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
             <!-- End -->
+
             <!-- Modal Add-->
             <div id="mymodal" class="modal fade" role="dialog">
                 <form action="/person/info" method="POST">
@@ -129,11 +112,6 @@
                                     <label>Major:</label>
                                     <input type="text" class="form-control" name="major" required="1">
                                 </div>
-
-
-
-
-
                         </div>
 
                         <div class="modal-footer">
