--- a/templates/index.html
+++ b/templates/index.html
@@ -2,12 +2,14 @@
 <html>
 <head>
     <title>View</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+          rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+          crossorigin="anonymous">
 </head>
 <body>
 
 <main>
-    <h1>Content of the Main Page</h1>
+    <h1><a href="/person/info">Content of the Main Page</a></h1>
 </main>
 <div class="container">
     <div class="row">
@@ -15,12 +17,13 @@
             <div class="jumbotron p-3">
                 <h2>Manage <b>Service</b>
                     <button type="button" class="btn btn-success" style="float:right"
-                                                   data-toggle="modal" data-backdrop="static" data-keyboard="false" data-target="#mymodal">Add new Person</button></h2>
+                            data-toggle="modal" data-backdrop="static" data-keyboard="false"
+                            data-target="#mymodal">Add new Person</button></h2>
                 <div class="input-group mb-3">
 
                     <div class="input-group-append">
                         <form class="d-flex" action="/person/info" method="get">
-                            <input type="text" class="form-control" placeholder="Search" name="search">
+                            <input type="text" class="form-control" placeholder="Search" required="1" name="search">
                             <button class="btn btn-outline-secondary" type="submit">Search</button>
                         </form>
                     </div>
@@ -32,30 +35,41 @@
                         <th>Name</th>
                         <th>Major</th>
                         <th class="text-center">Appearance</th>
-                        <th>Last Updated</th>
-                        <th>Action</th>
+                        <th>Create</th>
+                        <th class="text-center">Action</th>
                     </tr>
+
 
                     {{range $index, $element := .data}}
                     <tr>
-                        <td>{{$index}}</td>
+                        <td>{{add1 $index}}</td>
                         <td>{{$element.name}}</td>
                         <td>{{$element.major}}</td>
                         <td class="d-flex justify-content-center">
                             <form action="/person/info/appearance?id={{._id.Hex}}" method="post">
                                 <input type="hidden" name="name" value="{{$element.name}}">
                                 <input type="hidden" name="major" value="{{$element.major}}">
-                                <button type="submit" class="btn btn-outline-{{if $element.appearance}}success{{else}}danger{{end}}"
+                                <input type="hidden" name="appearance" value="{{$element.appearance}}">
+                                <button type="submit"
+                                        class="btn btn-sm btn-outline-{{if $element.appearance}}danger{{else}}secondary{{end}}"
                                         data-id="{{$element._id.Hex}}"
                                         data-appearance="{{$element.appearance}}">
                                     {{if $element.appearance}}present{{else}}absent{{end}}
                                 </button>
                             </form>
                         </td>
-                        <td>{{$element.updated_at}}</td>
+                        <td>{{FormatTimestamp $element.created_at}}</td>
                         <td class="d-flex" style="gap: 4px">
-                            <a href="" class="btn btn-warning btn-xs" data-toggle="modal" data-backdrop="static" data-keyboard="false" data-target="#modaledit{{$index}}">Edit</a>
-                            <a href="" class="btn btn-danger btn-xs" data-toggle="modal" data-backdrop="static" data-keyboard="false" data-target="#modaldelete{{$index}}">Delete</a>
+                            <a href="" class="btn btn-sm btn-warning btn-xs"
+                               data-toggle="modal" data-backdrop="static"
+                               data-keyboard="false"
+                               data-target="#modaledit{{$index}}">Edit
+
+                                <a href="" class="btn btn-sm btn-danger btn-xs"
+                                   data-toggle="modal"
+                                   data-backdrop="static"
+                                   data-keyboard="false"
+                                   data-target="#modaldelete{{$index}}">Delete</a>
                         </td>
                     </tr>
 
@@ -63,23 +77,22 @@
 
                     <div id="modaldelete{{$index}}" class="modal fade" role="dialog">
                         <form action="/person/info/delete?id={{._id.Hex}}" method="POST">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title">Modal title</h5>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body">
-                                    <p>Xóa {{$element.name}} ?</p>
-                                </div>
-                                <div class="modal-footer">
-                                    <div class="form-group">
-                                        <button class="btn btn-primary" type="submit">Confirm</button>
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title">Modal title</h5>
                                     </div>
-                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                    <div class="modal-body">
+                                        <p>Xóa {{$element.name}} ?</p>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <div class="form-group">
+                                            <button class="btn btn-primary" type="submit">Confirm</button>
+                                        </div>
+                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
                         </form>
                     </div>
 
@@ -91,13 +104,13 @@
                     <div id="modaledit{{$index}}" class="modal fade" role="dialog">
                         <div class="modal-dialog">
                             <form action="/person/info/update?id={{._id.Hex}}" method="POST">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h4 class="modal-title">Update Data</h4>
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h4 class="modal-title">Update Data</h4>
 
-                                </div>
+                                    </div>
 
-                                <div class="modal-body">
+                                    <div class="modal-body">
 
                                         <div class="form-group">
                                             <label>Name:</label>
@@ -109,20 +122,20 @@
                                             <input type="text" class="form-control" name="major" value="{{$element.major}}">
                                         </div>
 
-                                     
-                                </div>
 
-                                <div class="modal-footer">
-                                    <div class="form-group">
-                                        <button class="btn btn-primary" type="submit">Update</button>
                                     </div>
 
-                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                    <div class="modal-footer">
+                                        <div class="form-group">
+                                            <button class="btn btn-primary" type="submit">Update</button>
+                                        </div>
+
+                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+
+                                    </div>
+
 
                                 </div>
-
-
-                            </div>
 
                         </div>
                         </form>
@@ -130,18 +143,53 @@
                     <!-- End -->
                     {{end}}
                 </table>
+                <!-- Pagination -->
+                <ul class="pagination">
+                    {{if .prevPage}}
+                    <li class="page-item">
+                        <a class="page-link" href="/person/info?page={{.prevPage}}&search={{.search}}">Previous</a>
+                    </li>
+                    {{else}}
+                    <li class="page-item disabled">
+                        <span class="page-link">First</span>
+                    </li>
+                    {{end}}
+
+                    {{range $i, $page := .pages}}
+                    {{if eq $page $.currentPage}}
+                    <li class="page-item">
+                        <a class="page-link current-page disabled">{{$page}}</a>
+                    </li>
+                    {{else}}
+                    <li class="page-item">
+                        <a href="/person/info?page={{$page}}" class="page-link">{{$page}}</a>
+                    </li>
+                    {{end}}
+                    {{end}}
+
+                    {{if .isLastPage}}
+                    <li class="page-item disabled">
+                        <span class="page-link">Final</span>
+                    </li>
+                    {{else}}
+                    <li class="page-item">
+                        <a class="page-link" href="/person/info?page={{.nextPage}}&search={{.search}}">Next</a>
+                    </li>
+                    {{end}}
+                </ul>
+
             </div>
 
             <!-- Modal Add-->
             <div id="mymodal" class="modal fade" role="dialog">
                 <form action="/person/info" method="POST">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h4 class="modal-title">Add Data</h4>
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h4 class="modal-title">Add Data</h4>
 
-                        </div>
-                        <div class="modal-body">
+                            </div>
+                            <div class="modal-body">
 
                                 <div class="form-group">
                                     <label>Name:</label>
@@ -152,23 +200,23 @@
                                     <label>Major:</label>
                                     <input type="text" class="form-control" name="major" required="1">
                                 </div>
-                        </div>
-
-                        <div class="modal-footer">
-
-                            <div class="form-group">
-                                <button class="btn btn-primary" type="submit">Confirm</button>
                             </div>
 
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            <div class="modal-footer">
+
+                                <div class="form-group">
+                                    <button class="btn btn-primary" type="submit">Confirm</button>
+                                </div>
+
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+
+                            </div>
+
+
 
                         </div>
 
-
-
                     </div>
-
-                </div>
                 </form>
 
             </div>
