--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,11 @@
 <body>
 
 <main>
-    <h1><a href="/person/info">Content of the Main Page</a></h1>
+    <a class="btn" href="/person/info">
+        <button>
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M21 13v10h-6v-6h-6v6h-6v-10h-3l12-12 12 12h-3zm-1-5.907v-5.093h-3v2.093l3 3z"/></svg>
+        </button>
+    </a>
 </main>
 <div class="container">
     <div class="row">
@@ -23,7 +27,7 @@
 
                     <div class="input-group-append">
                         <form class="input-group d-flex" action="/person/info" method="get">
-                            <input type="text" class="form-control" placeholder="Search" required="1" name="search">
+                            <input type="text" class="form-control" value="{{.search}}" placeholder="Search" required="1" name="search">
                             <button class="btn btn-outline-secondary" type="submit">
                                 <svg width="20" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                                     <path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z" />
@@ -43,6 +47,7 @@
                         <th class="text-center">Action</th>
                     </tr>
 
+                    <!-- sort theo created_at -->
 
                     {{range $index, $element := .data}}
                     <tr>
@@ -88,6 +93,8 @@
                                     </div>
                                     <div class="modal-body">
                                         <p>Xóa {{$element.name}} ?</p>
+                                        <input id="currentDP{{$index}}" type="hidden" name="page">
+                                        <input id="currentDS{{$index}}" type="hidden" name="search">
                                     </div>
                                     <div class="modal-footer">
                                         <div class="form-group">
@@ -105,26 +112,27 @@
 
                     <!-- Modal Update -->
 
-                    <div id="modaledit{{$index}}" class="modal fade" role="dialog">
+                        <div id="modaledit{{$index}}" class="modal fade" role="dialog">
                         <div class="modal-dialog">
                             <form action="/person/info/update?id={{._id.Hex}}" method="POST">
                                 <div class="modal-content">
                                     <div class="modal-header">
                                         <h4 class="modal-title">Update Data</h4>
-
                                     </div>
 
                                     <div class="modal-body">
 
                                         <div class="form-group">
                                             <label>Name:</label>
-                                            <input type="text" class="form-control" name="name" value="{{$element.name}}">
+                                            <input type="text" class="form-control" name="name" required="1" value="{{$element.name}}">
                                         </div>
 
                                         <div class="form-group">
                                             <label>Major:</label>
-                                            <input type="text" class="form-control" name="major" value="{{$element.major}}">
+                                            <input type="text" class="form-control" name="major" required="1" value="{{$element.major}}">
                                         </div>
+                                        <input id="currentP{{$index}}" type="hidden" name="page">
+                                        <input id="currentS{{$index}}" type="hidden" name="search">
 
 
                                     </div>
@@ -168,10 +176,6 @@
                         {{if eq $page $.currentPage}}
                         <li class="page-item disabled">
                             <a class="page-link current-page">{{$page}}</a>
-                        </li>
-                        {{else}}
-                        <li class="page-item">
-                            <a id="page-nav" class="page-link">{{$page}}</a>
                         </li>
                         {{end}}
                         {{end}}
@@ -270,6 +274,17 @@
     pagetext = document.getElementById('page-nav').text
     var navpage = document.getElementById('page-nav');
     navpage.href = "/person/info?page=" + pagetext + "&search=" + pageSearch;
+</script>
+<script>
+    var page = new URLSearchParams(window.location.search).get("page")
+    var search = new URLSearchParams(window.location.search).get("search")
+
+    for (let i = 0; i < 6; i++) {
+        document.getElementById("currentP"+i).value = page;
+        document.getElementById("currentS"+i).value = search;
+        document.getElementById("currentDP"+i).value = page;
+        document.getElementById("currentDS"+i).value = search;
+    }
 </script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.6/dist/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
