--- a/templates/profile.html
+++ b/templates/profile.html
@@ -10,7 +10,7 @@
 <body>
 <div class="student-profile py-4">
     <div class="container">
-        <a class="btn" href="/person/info">
+        <a class="btn" href="/person/info/web">
             <button>
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-return-left" viewBox="0 0 16 16"> <path fill-rule="evenodd" d="M14.5 1.5a.5.5 0 0 1 .5.5v4.8a2.5 2.5 0 0 1-2.5 2.5H2.707l3.347 3.346a.5.5 0 0 1-.708.708l-4.2-4.2a.5.5 0 0 1 0-.708l4-4a.5.5 0 1 1 .708.708L2.707 8.3H12.5A1.5 1.5 0 0 0 14 6.8V2a.5.5 0 0 1 .5-.5z"/> </svg>
             </button>
@@ -18,7 +18,7 @@
         <div class="row">
             <div class="col-lg-4">
                 <div class="card shadow-sm">
-                    <form id="myForm" action="/person/info/upload" method="POST"  enctype="multipart/form-data">
+                    <form id="myForm" action="/person/info/api/upload" method="POST"  enctype="multipart/form-data">
                     <div class="card-header bg-transparent text-center">
                         <img width="100%" height="auto" src="/uploads/{{.id}}.jpg" alt="Không có hình ảnh">
                         <input id="myInput" type="file" name="profileImage">
