--- a/templates/login.html
+++ b/templates/login.html
@@ -13,14 +13,14 @@
         <div class="card md-0">
             <div class="card-header">Login</div>
             <div class="card-body">
-                <form id="loginForm" method="POST">
+                <form action="/auth/api/login" method="POST">
                     <div class="mb-3">
-                        <label for="userName" class="form-label">Username:</label>
-                        <input class="form-control" type="text" id="userName" name="userName" required>
+                        <label class="form-label">Username:</label>
+                        <input class="form-control" type="text" name="username" required>
                     </div>
                     <div class="mb-3">
-                        <label for="password" class="form-label">Password:</label>
-                        <input class="form-control" type="password" id="password" name="password" required>
+                        <label class="form-label">Password:</label>
+                        <input class="form-control" type="password" name="password" required>
                     </div>
 
                     <input class="btn btn-primary" type="submit" value="Login">
@@ -30,40 +30,7 @@
         </div>
     </div>
 </div>
-<script>
 
-    document.getElementById("loginForm").addEventListener("submit", function(event) {
-        event.preventDefault();
-        const userName = document.getElementById("userName").value;
-        const password = document.getElementById("password").value;
-
-        // Gửi thông tin đăng nhập về API go
-        fetch("/auth/api/login", {
-            method: "POST",
-            headers: {
-                "Content-Type": "application/json"
-            },
-            body: JSON.stringify({ userName, password })
-        })
-            .then(response => response.json())
-            .then(data => {
-                    localStorage.setItem("authToken", data.token);
-                    let authToken = data.token;
-                    fetch("/person/info", {
-                        method: "GET",
-                        headers: {
-                            "Authorization": `Bearer ${authToken}`
-                        }
-                    })
-                        .then(response => response.json())
-                        .catch(error => console.error("Error:", error));
-
-                    document.getElementById("loginForm").reset();
-
-            })
-            .catch(error => console.error("Error:", error));
-    });
-</script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.6/dist/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
