--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
           rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
           crossorigin="anonymous">
 </head>
-<body>
+<body style="background-color: black">
 <main>
     <a style="float:left" class="btn" href="/auth">
         <button>
@@ -29,7 +29,7 @@
         </button>
     </a>
 </main>
-<div class="container">
+<div class="container" style="background-color: white">
     <div class="row">
         <div class ="col md-12">
             <div class="jumbotron p-3">
